--- a/Pipper-Front/src/app/pages/editar-perfil/editar-perfil.page.scss
+++ b/Pipper-Front/src/app/pages/editar-perfil/editar-perfil.page.scss
@@ -16,6 +16,10 @@ ion-header {
     margin-top: 2%;
 }
 
+.cardBG {
+    background-color: #006A71;
+}
+
 ion-header::after {
     background-image: none;
 }
