--- a/Pipper-Front/src/app/tab3/tab3.page.html
+++ b/Pipper-Front/src/app/tab3/tab3.page.html
@@ -20,20 +20,14 @@
   />
 </ion-card-header>
 <div class="user">
-<ion-fab-button (click)="takePhoto()" color="tertiary">
+<ion-fab-button (click)="takePhoto()" color="tertiary" mode="md">
   <ion-icon name="camera"></ion-icon>
 </ion-fab-button>
 </div>
 
 <ion-card-content>
-  <div class="usuario">
-    <div class="imgPlace">
-      <div class="imagem">
-        <img src="https://i.pinimg.com/736x/27/9d/60/279d60166aa6d25c9bf4fa4cd2f9f9eb.jpg" class="rosto">
-      </div>
-    </div>
-    <div class="nome"><h4>Fulano <br> @fulano</h4></div>
-    <div class="tag"><ion-button color="tertiary" mode="md"><ion-icon name="chevron-back-outline"></ion-icon>tag</ion-button></div>
+  <div class="Tags">
+    <div class="tag"><ion-button color="tertiary" mode="md"><ion-icon name="chevron-back-outline"></ion-icon>tags</ion-button></div>
   </div>
     <ion-list>
       <ion-item>
