--- a/Pipper-Front/src/app/cadastro/cadastro.page.scss
+++ b/Pipper-Front/src/app/cadastro/cadastro.page.scss
@@ -3,6 +3,9 @@
     font-family: 'Poiret One';
     --color: #50D890;
 }
+.ion-padding {
+    padding-top: 0px;
+}
 ion-label {
     --color: #50D890;
 }
