--- a/Pipper-Front/src/app/components/profile-post/profile-post.component.scss
+++ b/Pipper-Front/src/app/components/profile-post/profile-post.component.scss
@@ -94,6 +94,10 @@ ion-icon {
     margin-right: 5%;
 }
 
+.noMargin {
+    margin-left: 0px;
+}
+
 @media screen and (max-width: 350px) {
     .button {
         width: 25%;
