*Deletar Post e Comment/+redirecionar post na search

--- a/Pipper-Front/src/app/components/profile-post/profile-post.component.html
+++ b/Pipper-Front/src/app/components/profile-post/profile-post.component.html
@@ -2,8 +2,8 @@
   <ion-card-content>
     <div class="profilePost">
       <div class="profileContent">
-        <div class = "imgPlace">
-          <div class="profileImg">
+        <div class = "imgPlace" *ngIf="post.photo">
+          <div class="profileImg" >
             <img [src]="post.photo">
           </div>
         </div>
