--- a/Pipper-Front/src/app/components/comment/comment.component.scss
+++ b/Pipper-Front/src/app/components/comment/comment.component.scss
@@ -57,3 +57,26 @@
     margin-top: 3%;
     margin-bottom: 5%;
 }
+
+.trash {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin-left: 2%;
+    width: 10%;
+}
+
+.trashButton {
+    --background: #272727;
+    --box-shadow: none;
+}
+
+.trashButton span {
+    padding-left: 25%;
+    padding-right: 25%;
+}
+
+.trashIcon {
+    color: #50D890;
+    font-size: 150%;
+}
