--- a/Pipper-Front/src/app/components/user-component/user-component/user-component.component.scss
+++ b/Pipper-Front/src/app/components/user-component/user-component/user-component.component.scss
@@ -11,8 +11,8 @@
 .userProfilePic img {
     display: inline-block;
     margin: 0 auto;
-    height: auto;
-    width: auto;
+    height: 100%;
+    width: 100%;
     object-fit: cover;
     object-position: center;
 }
