--- a/Pipper-Front/src/app/pages/post/post.page.html
+++ b/Pipper-Front/src/app/pages/post/post.page.html
@@ -88,6 +88,30 @@
       
     </form>
     </div>
+
+    <!--Div para dar rating do post-->
+
+    <div *ngIf="rateMode" class="inputAndSubmit">
+      <form>
+        <ion-item>
+          <ion-card class="ratingCard">
+            <ion-card-content>
+              <div class="ratings">
+                <ion-button class="starButton" (click)="star(1)"><ion-icon name="star" class="star" [ngClass]="{'click':starColor1}" ></ion-icon></ion-button>
+                <ion-button class="starButton" (click)="star(2)"><ion-icon name="star" class="star" [ngClass]="{'click':starColor2}" ></ion-icon></ion-button>
+                <ion-button class="starButton" (click)="star(3)"><ion-icon name="star" class="star" [ngClass]="{'click':starColor3}" ></ion-icon></ion-button>
+                <ion-button class="starButton" (click)="star(4)"><ion-icon name="star" class="star" [ngClass]="{'click':starColor4}" ></ion-icon></ion-button>
+                <ion-button class="starButton" (click)="star(5)"><ion-icon name="star" class="star" [ngClass]="{'click':starColor5}" ></ion-icon></ion-button>
+              </div>
+            </ion-card-content>
+          </ion-card>
+        </ion-item>
+        <div class="ratingText">
+          <h5 class="chosenRating">Sua avaliação foi: {{individual_rating}}</h5>
+        </div>
+      <ion-button class="interactionButton" size="small" mode="md" type="submit"><span style="text-transform:none!important;" (click)=ratePost()>Concluído</span></ion-button>
+      </form>
+    </div>
       
       <!-- Botões que desaparecem quando enquanto a edição do post nao estiver finalizada -->
       <div class="interactionButtons" *ngIf= "editModeOff">
@@ -95,7 +119,7 @@
           <div class="leftSideButtons">
             <ion-button class="interactionButton" size="small" mode="md" (click)="likePost()"><ion-icon name="thumbs-up-outline"></ion-icon>{{post.like}}</ion-button>
             <ion-button class="interactionButton" size="small" mode="md" (click)="listComments()"><ion-icon name="chatbubble-outline"></ion-icon>{{post.count_comments}}</ion-button>
-            <ion-button class="interactionButton" size="small" mode="md"><ion-icon name="star-outline"></ion-icon>{{post.creator_rating}}</ion-button>
+            <ion-button class="interactionButton" size="small" mode="md" (click)="rate()"><ion-icon name="star-outline"></ion-icon>{{post.creator_rating}}</ion-button>
           </div>
           <div class="postTag">
             <ion-button size="small" class="buttonTag" strong="true" mode="md"><span style="text-transform:none!important;">Tags</span></ion-button>
