--- a/Pipper-Front/src/app/components/home-post/home-post.component.scss
+++ b/Pipper-Front/src/app/components/home-post/home-post.component.scss
@@ -204,6 +204,7 @@ ion-card {
 
 .tags {
     height: 25px;
+    width: auto;
     font-family: 'Poiret One', cursive;
     --background: #404040;
     color: #FFE9E9;
