--- a/Pipper-Front/src/app/pages/post/post.page.html
+++ b/Pipper-Front/src/app/pages/post/post.page.html
@@ -47,7 +47,7 @@
             <div class="userNameAndNickname">
               <h3>{{user}}</h3>
             </div>
-            <div class="timePart"><h4>Hoje às 10h30</h4></div>
+            <div class="nickname"><h4>@{{nickname}}</h4></div>
           </div>
         </div>
 
@@ -69,6 +69,13 @@
          <img src="../assets/quote2.png">
         </div>
       </div>
+    </div>
+    <div class="todasAsTags">
+      <ion-button mode="md" class="tagsAll" 
+      *ngFor="let tags of post.tags"
+      >
+      {{tags.title}}
+      </ion-button>
     </div>
     <!-- Div para editar as informações do post -->
     <div *ngIf="editMode" class="inputAndSubmit">
@@ -96,20 +103,22 @@
     <div *ngIf="rateMode" class="inputAndSubmit">
       <form>
         <ion-item>
-          <ion-card class="ratingCard">
-            <ion-card-content>
-              <div class="ratings">
-                <ion-button class="starButton" (click)="star(1)"><ion-icon name="star" class="star" [ngClass]="{'click':starColor1}" ></ion-icon></ion-button>
-                <ion-button class="starButton" (click)="star(2)"><ion-icon name="star" class="star" [ngClass]="{'click':starColor2}" ></ion-icon></ion-button>
-                <ion-button class="starButton" (click)="star(3)"><ion-icon name="star" class="star" [ngClass]="{'click':starColor3}" ></ion-icon></ion-button>
-                <ion-button class="starButton" (click)="star(4)"><ion-icon name="star" class="star" [ngClass]="{'click':starColor4}" ></ion-icon></ion-button>
-                <ion-button class="starButton" (click)="star(5)"><ion-icon name="star" class="star" [ngClass]="{'click':starColor5}" ></ion-icon></ion-button>
-              </div>
-            </ion-card-content>
-          </ion-card>
+          <div class="ratingDiv">
+            <ion-card class="ratingCard">
+              <ion-card-content class="paddingCard">
+                <div class="ratings">
+                  <ion-button class="starButton" (click)="star(1)"><ion-icon name="star" class="star" [ngClass]="{'click':starColor1}" ></ion-icon></ion-button>
+                  <ion-button class="starButton" (click)="star(2)"><ion-icon name="star" class="star" [ngClass]="{'click':starColor2}" ></ion-icon></ion-button>
+                  <ion-button class="starButton" (click)="star(3)"><ion-icon name="star" class="star" [ngClass]="{'click':starColor3}" ></ion-icon></ion-button>
+                  <ion-button class="starButton" (click)="star(4)"><ion-icon name="star" class="star" [ngClass]="{'click':starColor4}" ></ion-icon></ion-button>
+                  <ion-button class="starButton" (click)="star(5)"><ion-icon name="star" class="star" [ngClass]="{'click':starColor5}" ></ion-icon></ion-button>
+                </div>
+              </ion-card-content>
+            </ion-card>
+          </div>
         </ion-item>
         <div class="ratingText">
-          <h5 class="chosenRating">Sua avaliação foi: {{individual_rating}}</h5>
+          <h5 class="chosenRating">Sua avaliação: {{individual_rating}} <ion-icon name="star" class="star2"></ion-icon></h5>
         </div>
       <ion-button class="interactionButton" size="small" mode="md" type="submit"><span style="text-transform:none!important;" (click)=ratePost()>Concluído</span></ion-button>
       </form>
@@ -123,13 +132,10 @@
             <ion-button class="interactionButton" size="small" mode="md" (click)="listComments()"><ion-icon name="chatbubble-outline"></ion-icon>{{post.count_comments}}</ion-button>
             <ion-button class="interactionButton" size="small" mode="md" (click)="rate()"><ion-icon name="star-outline"></ion-icon>{{post.creator_rating}}</ion-button>
           </div>
-          <div class="postTag">
-            <ion-button size="small" class="buttonTag" strong="true" mode="md"><span style="text-transform:none!important;">Tags</span></ion-button>
+          <div class="trash">
+            <ion-button class="interactionButton" size="small" mode="md" (click)="edit()" *ngIf="editButton"><ion-icon name="create-outline"></ion-icon><span style="text-transform:none!important;"></span></ion-button>
+            <ion-button class="interactionButton" size="small" mode="md" (click)="presentAlert()" *ngIf="deleteButton"><ion-icon name="trash-outline"></ion-icon><span style="text-transform:none!important;"></span></ion-button>
           </div>
-        </div>
-        <div class="trash">
-          <ion-button class="interactionButton" size="small" mode="md" (click)="edit()" *ngIf="editButton"><ion-icon name="create-outline"></ion-icon><span style="text-transform:none!important;">Editar</span></ion-button>
-          <ion-button class="interactionButton" size="small" mode="md" (click)="presentAlert()" *ngIf="deleteButton"><ion-icon name="trash-outline"></ion-icon><span style="text-transform:none!important;">Apagar</span></ion-button>
         </div>
       </div>
     </ion-card-content>
