- tab notification button

--- a/Pipper-Front/src/app/tabs/tabs.page.html
+++ b/Pipper-Front/src/app/tabs/tabs.page.html
@@ -5,9 +5,9 @@
         <img src="../../assets/chameleonpog.png">
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <!-- <ion-tab-button tab="tab2">
       <ion-icon name="notifications-outline"></ion-icon>
-    </ion-tab-button>
+    </ion-tab-button> -->
 
     <ion-tab-button (click)="verify()">
       <ion-icon name="add-circle-outline"></ion-icon>
@@ -22,5 +22,4 @@
     </ion-tab-button>
   </ion-tab-bar>
  
-
 </ion-tabs>
