+new user notify

--- a/Pipper-Front/src/app/pages/editar-perfil/editar-perfil.page.html
+++ b/Pipper-Front/src/app/pages/editar-perfil/editar-perfil.page.html
@@ -41,16 +41,16 @@
           <ion-list class="ionList">
             <ion-label>Nome</ion-label>
             <ion-item class="ionItem">
-              <ion-input type="name" placeholder="Fulano" formControlName="name" maxlength="25"></ion-input>
+              <ion-input type="name" placeholder="Como você quer que te chamem?" formControlName="name" maxlength="25"></ion-input>
             </ion-item>
             <ion-label>Nickname</ion-label>
             <ion-item class="ionItem">
-              <ion-input type="nickname" placeholder="@fulano" formControlName="nickname" maxlength="10"></ion-input>
+              <ion-input type="nickname" placeholder="Edite seu nome de usuário" formControlName="nickname" maxlength="10"></ion-input>
             </ion-item>
             <div class="hr"></div>
             <ion-label>E-mail</ion-label>
               <ion-item class="ionItem">
-                <ion-input type="email" placeholder="fulano@gmail.com" formControlName="email"></ion-input>
+                <ion-input type="email" placeholder="Altere seu e-mail" formControlName="email"></ion-input>
               </ion-item>
               <ion-label>Senha</ion-label>
               <ion-item class="ionItem">
