--- a/Pipper-Front/src/app/pages/cadastro-imagem/cadastro-imagem.page.scss
+++ b/Pipper-Front/src/app/pages/cadastro-imagem/cadastro-imagem.page.scss
@@ -62,7 +62,7 @@ h3{
     position: relative;
     overflow: hidden;
     border-radius: 50%;
-    background-image: url("../../assets/chamaBG.png");
+    background-image: url("../../../assets/chamaBG.png");
     background-repeat: repeat;
     background-size: contain;
     object-fit: cover;
